05-15 데일리 스크럼 작성

--- a/dailyScrum/05-15.md
+++ b/dailyScrum/05-15.md
@@ -3,7 +3,7 @@
 - 플로우 q1 문제 styled-components 완료
 - 5월 13일 녹화본보기 (미완료)
 
-## 오늘 무엇을 공부하는지. (세부적으로 정리할 것)
+## 오늘 공부할 내용
 
 - 플로우 q2, q3 문제풀기
 - 5월 13일 녹화본보기
