05-15 데일리 스크럼 작성

--- a/dailyScrum/05-15.md
+++ b/dailyScrum/05-15.md
@@ -1,12 +1,11 @@
 ## 전날 공부한 내용
 
 - 플로우 q1 문제 styled-components 완료
-- 5월 13일 녹화본보기 (미완료)
 
 ## 오늘 공부할 내용
 
 - 플로우 q2, q3 문제풀기
-- 5월 13일 녹화본보기
+- 알고리즘 Day5 수학, 배열 문제풀기
 
 ## 전날 공부하면서 아쉬웠던 점
 
