--- a/dailyScrum/05-17.md
+++ b/dailyScrum/05-17.md
@@ -1,12 +1,13 @@
 ## 어제 한 일
 
-- 알고리즘 문제풀기
-- 플로우 q3 문제풀기 (진행중)
+- 플로우 q3 문제풀기
 
-## 어려웠던 점
+## 어려웠던 점(부족한 점)
+
+- useEffect()안에 if문을 작성해서 접근하는 것까지 생각해보고 그 안에 어떻게 작성해야하는지에서 막혀서 useEffect() 사용법에 대해서 더 연습해봐야겠습니다.
 
 ## 오늘 할 일
 
 - 깃허브 플로우 연습하기
-- 알고리즘 문제풀기
 - 플로우 q3 완성하기
+- 플로우 q2 (2-2) 문제풀기
